[Feature] Workflow: 상세 뷰 개발
#86eq9f2a2[complete]
